# typotuner

./: .gitignore  FOR_SMLFLG.md  LICENSE  README.md  pyproject.toml
services/: 99-steelseries-typotuner.rules  typotuner-web.service  typotuner.service
tests/: conftest.py  test_analyzer.py  test_hid.py  test_qwertz.py  test_recommender.py  test_storage.py
typotuner/: __init__.py  analyzer.py  cli.py  daemon.py  qwertz.py  recommender.py  storage.py
typotuner/hid/: PROTOCOL.md  __init__.py  actuation.py  device.py  keymap.py  oled.py  protocol.py  safety.py
typotuner/web/: app.py
typotuner/web/templates/: base.html  dashboard.html  fingers.html  heatmap.html  recommendations.html
