[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typotuner"
version = "0.1.0"
description = "Typing analysis daemon for 10-finger QWERTZ optimization with actuation recommendations"
requires-python = ">=3.11"
dependencies = [
    "evdev>=1.7",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
typotuner = "typotuner.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
